--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "mongoose": "^8.2.1",
     "reflect-metadata": "^0.2.0",
